Grammatical changes and altered wording

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <h2>About me</h2>
             <p>
                 My name is Charlie and I am a self-taught programmer currently living in Manchester. 
-                Though I have been working various admin and account manager roles since I left university, 
+                Though I have been working various account manager roles since I left university, 
                 I have always been attracted to more technical fields, hence choosing a Nuclear Science degree.
             </p>
             <br>  
             <p>
-                After parting ways with my last employer in October 2020, and a discussion with my brother-in-law who is a software product manager, 
-                I decided to live off savings for a few months and take the Full-Stack Developer course on Codecademy.  However, realising that I was particularly 
-                enjoying the creative element of CSS and HTML, I was advising that I might be more suited to the Front-End.
+                After a discussion with my brother-in-law who is a software product manager, I decided to leave my previous employer in October 2020 in order to 
+                concentrate full time on the Full-Stack Developer course on Codecademy.  However, realising that I was particularly 
+                enjoying the creative element of CSS and HTML, I was advised that I might be more suited to the Front-End.
             </p>
         <h2>Skills & Languages</h2>
             <p>
