addition of react app

--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
                         <img src="LandingPageImage.PNG" class="project-image" />
                     </a>
                 </span>
-        </details>
+        </details>https://charliehfb.github.io/anycolour/
 
         <details>
             <summary>Project 2: Spotify API App.</summary>
                 <p>An website which allows users to make a playlist and save it to their Spotify Account using the Spotify API. Made using CSS, HTML and REACT.js.</p>
-                <img src="SPotifyAppImage.PNG" class="project-image" />
+                <span>
+                    <a href="https://charliehfb.github.io/anycolour/" target=_blank>
+                        <img src="SPotifyAppImage.PNG" class="project-image" />
+                    </a>
+                </span>
                 
         </details>
         <!-- <details>
