fix previous error

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <img src="LandingPageImage.PNG" class="project-image" />
                     </a>
                 </span>
-        </details>https://charliehfb.github.io/anycolour/
+        </details>
 
         <details>
             <summary>Project 2: Spotify API App.</summary>
