--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p>An website which allows users to make a playlist and save it to their Spotify Account using the Spotify API. Made using CSS, HTML and REACT.js.</p>
                 <span>
                     <a href="https://charliehfb.github.io/anycolour/" target=_blank>
-                        <img src="SPotifyAppImage.PNG" class="project-image" />
+                        <img src="appScreenshotTwo.PNG" class="project-image" />
                     </a>
                 </span>
                 
