minor layout changes

--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
         <h2>Projects</h2> 
             <p>These are some of the main projects I have completed while learning</p>
 
-        <details>
-            <summary>Project 1: Landing Page</summary>
+        <details open>
+            <summary>Project 1: Spotify API App.</summary>
+                <p>An website which allows users to make a playlist and save it to their Spotify Account using the Spotify API. Made using CSS, HTML and REACT.js.</p>
+                <span>
+                    <a href="https://charliehfb.github.io/anycolour/" target=_blank>
+                        <img src="appScreenshotTwo.PNG" class="project-image" />
+                    </a>
+                </span>       
+            </details>
+
+        <details open>
+            <summary>Project 2: Landing Page</summary>
                 <p>A landing page for a ficticious florist (and ficticious flowers), made using HTML and CSS</p>
                 <span>
                     <a href="https://charliehfb.github.io/LandingPage1/" target=_blank>
@@ -65,16 +75,6 @@
                 </span>
         </details>
 
-        <details>
-            <summary>Project 2: Spotify API App.</summary>
-                <p>An website which allows users to make a playlist and save it to their Spotify Account using the Spotify API. Made using CSS, HTML and REACT.js.</p>
-                <span>
-                    <a href="https://charliehfb.github.io/anycolour/" target=_blank>
-                        <img src="appScreenshotTwo.PNG" class="project-image" />
-                    </a>
-                </span>
-                
-        </details>
         <!-- <details>
             <summary>Project 3</summary>
                 <p>The third project, made using whatever language and does whatever.</p>
