Small changes to about

--- a/index.html
+++ b/index.html
@@ -33,16 +33,33 @@
             </p>
             <br>  
             <p>
-                After a discussion with my brother-in-law who is a software product manager, I decided to leave my previous employer in October 2020 in order to 
-                concentrate full time on the Full-Stack Developer course on Codecademy.  However, realising that I was particularly 
-                enjoying the creative element of CSS and HTML, I was advised that I might be more suited to the Front-End.
+                After leaving my previous employed in October 2020, and following a discussion with my brother-in-law who is a software product manager, I decided 
+                to support myself while concentrating full time on completing the Full-Stack Programmer course on Codecademy.  However, realising that I was particularly 
+                enjoying the creative element of CSS and HTML, I was advised that I might be more suited to the Front-End. I therefore completed what I was told 
+                were the "necessary" modules of the Full-Stack course for Front-End development.
+            </p>
+            <br>  
+            <p>
+                After beginning to apply for roles in February 2021, I realised that many of the jobs in my area were PHP and SQL focused, so I took another month off to 
+                complete the PHP and SQL courses (once again on Codecademy). 
             </p>
         <h2>Skills & Languages</h2>
             <p>
-                The Majority of my time has been spent learning JavaScript, HTML, and CSS.  However I have also worked with the following:
+                The primary focus of my studies has been the below:
             </p>
             <ul>
-                <li>React (My current focus)</li>
+                <li>JavaScript</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>PHP</li>
+                <li>SQL</li>
+            </ul>
+            <br>
+            <p>
+                However I have also worked with the following:
+            </p>
+            <ul>
+                <li>React</li>
                 <li>Node.js</li>
                 <li>Git Bash</li>
                 <li>Git Hub</li>
@@ -57,7 +74,13 @@
 
         <details open>
             <summary>Project 1: Spotify API App.</summary>
-                <p>An website which allows users to make a playlist and save it to their Spotify Account using the Spotify API. Made using CSS, HTML and REACT.js.</p>
+                <p>
+                    A website which allows users to make a playlist and save it to their Spotify Account using the Spotify API. Made using CSS, HTML and REACT.js.
+                </p>
+                <br>
+                <p>(note: At present it appears that there is a fault with the Spotify API which unfortunately hinders the functionality of the App.  I am intermittently 
+                    checking the Codecademy forums to see if this has been resolved.)
+                </p>
                 <span>
                     <a href="https://charliehfb.github.io/anycolour/" target=_blank>
                         <img src="appScreenshotTwo.PNG" class="project-image" />
